# ErnOSAgent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_OPUS_4.6_CODEBASE_REVIEW.md  Cargo.toml  Gemini pro 3.1 high review.md  LICENSE  README.md  VERIFICATION.md  ern-os.toml  local.properties  repro.rs  settings.gradle.kts  test_grid.json  uniffi.toml
.agents/workflows/: no-limits.md  observer-audit.md  rust-code-size.md
.ernosagent/: directive.md  resonance_investigation_log.md
.github/workflows/: ci.yml
agents/: rust_code_governance.md
android/: local.properties
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MEMORY.md  README.md  architecture.md  configuration.md  inference.md  interpretability.md  learning.md  manual_verification.md  memory.md  providers.md  testing.md  tools.md
extensions/ernos-chat/: extension.js  package.json
gradle/wrapper/: gradle-wrapper.properties
mobile/androidApp/: build.gradle.kts
native/: README.md
prompts/: core.md  identity.md
sae_training/: README.md  feature_map.json
scripts/: build-mobile.sh  download_weights.sh  flux_server.py  train_sae.sh  upgrade.sh
src/: android_bridge.rs  app.rs  config.rs  config_tests.rs  lib.rs  main.rs  services.rs  startup.rs
src/agents/: mod.rs  parallel.rs  teams.rs
src/audio/: capture.rs  mod.rs  router.rs  whisper.rs
src/checkpoint/: mod.rs  restore.rs  snapshot.rs
src/computer/: alu.rs  mod.rs
src/config/: app.rs  app_tests.rs  config_tests.rs  defaults.rs  defaults_tests.rs  mod.rs  neo4j.rs  neo4j_tests.rs
src/inference/: autonomy.rs  context.rs  fast_reply.rs  mod.rs  progress.rs  react_loop.rs  react_observer.rs  router.rs  stream.rs  stream_consumer.rs  sub_agent.rs
src/interpretability/: collector.rs  corpus.rs  divergence.rs  extractor.rs  features.rs  features_tests.rs  live.rs  mod.rs  probe.rs  sae.rs  snapshot.rs  steering_bridge.rs  train_runner.rs  trainer.rs  trainer_persist.rs  trainer_tests.rs
src/learning/: buffers.rs  buffers_rejection.rs  buffers_tests.rs  distill.rs  manifest.rs  mod.rs  observer_buffer.rs  sleep.rs  sleep_metal.rs  sleep_reflection.rs  sleep_tests.rs  teacher.rs  teacher_tests.rs
src/logging/: mod.rs  session_layer.rs
src/memory/: consolidation.rs  document_store.rs  embeddings.rs  kg_tests.rs  knowledge_graph.rs  lessons.rs  memory_tests.rs  mod.rs  procedures.rs  scratchpad.rs  skills.rs  timeline.rs
src/mobile/: desktop_discovery.rs  engine.rs  ernosagent.udl  llama_ffi.rs  llama_ffi_tests.rs  mod.rs  model_manager.rs  native_build.rs  provider_chain.rs  provider_hybrid.rs  provider_local.rs  provider_relay.rs  uniffi_scaffolding.rs
src/model/: mod.rs  registry.rs  router.rs  spec.rs
src/network/: capabilities.rs  code_propagation.rs  compute.rs  content_filter.rs  crypto.rs  dht.rs  discovery.rs  governance.rs  human_mesh.rs  identity.rs  knowledge_sync.rs  mesh_fs.rs  mesh_loop.rs  mod.rs  neutralise.rs  peer_id.rs  sanctions.rs  sandbox.rs  transport.rs  trust.rs  web_proxy.rs  weight_exchange.rs  wire.rs
src/observer/: audit.rs  insights.rs  mod.rs  parser.rs  rules.rs  skills.rs
src/planning/: dag.rs  executor.rs  mod.rs  planner.rs
src/platform/: adapter.rs  custom.rs  discord.rs  discord_handler.rs  mod.rs  platform_tests.rs  registry.rs  router.rs  router_stream.rs  telegram.rs  whatsapp.rs
src/prompt/: context.rs  core.rs  hud.rs  identity.rs  mod.rs  tools.rs
src/provider/: candle_native.rs  huggingface.rs  llamacpp.rs  llamacpp_embed.rs  llamacpp_tests.rs  lmstudio.rs  mod.rs  ollama.rs  ollama_tests.rs  openai_compat.rs  spiral_detector.rs  stream_parser.rs  stream_parser_tests.rs
src/react/: loop.rs  mod.rs  reply.rs
src/scheduler/: executor.rs  job.rs  mod.rs  runner.rs  store.rs
src/session/: manager.rs  mod.rs  store.rs
src/steering/: identity_vector.rs  mod.rs  server.rs  vectors.rs
src/tools/: artifact_tool.rs  autonomy_tool.rs  browser_tool.rs  browser_tool_stub.rs  checkpoint.rs  codebase_edit.rs  codebase_search.rs  compiler.rs  containment.rs  discord_tools.rs  distillation.rs  distillation_tests.rs  download_tool.rs  executor.rs  expert_selector.rs  file_read.rs  file_write.rs  git.rs  image_gen_tool.rs  image_tool.rs  interpretability_tool.rs  introspect_tool.rs  learning_tool.rs  lessons_tool.rs  memory_tool.rs  mod.rs  moderation_tool.rs  performance_review.rs  reasoning_tool.rs  scheduler_tool.rs  schema.rs  schema_definitions.rs  scratchpad_tool.rs  search_providers.rs  self_skills_tool.rs  shell.rs  steering_tool.rs  stem_tool.rs  synaptic_tool.rs  system_logs.rs  (+4 more)
src/ui/: chat.rs  input.rs  mod.rs  model_picker.rs  platform_manager.rs  sidebar.rs  status_bar.rs  steering_panel.rs  theme.rs
tests/: e2e_chat.rs  e2e_interpretability.rs  e2e_learning.rs  e2e_llama.rs  e2e_lora.rs  e2e_observer.rs  e2e_platforms.rs  e2e_pwa.rs  e2e_sessions.rs  e2e_tests.rs  e2e_tools.rs  e2e_web_api.rs  e2e_web_routes.rs  mesh_e2e.rs  mesh_integration.rs  system_verification_test.txt
(+137 files in other folders)
