[package]
name = "ernosagent"
version = "1.0.0"
edition = "2021"
authors = ["mettamazza"]
description = "Local-first, privacy-first AI agent with recursive self-improvement — desktop to mobile"
license = "MIT"
readme = "README.md"

[features]
default = ["discord", "telegram", "mesh"]
discord = ["dep:serenity", "dep:poise"]
telegram = ["dep:teloxide"]
interp = ["dep:memmap2"]
mobile-native = []  # Enable llama.cpp C FFI static linking (requires native lib to be built)
all-platforms = ["discord", "telegram"]
mesh = [
    "dep:quinn", "dep:rustls", "dep:rcgen",
    "dep:rmp-serde",
    "dep:ed25519-dalek", "dep:x25519-dalek", "dep:chacha20poly1305",
    "dep:rand",
]
mesh-sandbox = ["mesh", "dep:wasmtime"]

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP + streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# IDs + time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage
neo4rs = "0.8"
dirs = "6"
cron = "0.13"

# Search + display
fuzzy-matcher = "0.3"
regex = "1"
urlencoding = "2"
futures-util = "0.3"

# Media encoding
base64 = "0.22"

# Crypto (webhook signature)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Web server (Web UI + WhatsApp webhook)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# ML — Candle Metal backend (always-on: real LoRA training on M3 Ultra)
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
safetensors = { version = "0.4" }
memmap2 = { version = "0.9", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
hostname = "0.4"

# Optional — platform adapters
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"], optional = true }
poise = { version = "0.6", optional = true }
songbird = { version = "0.4", optional = true }
teloxide = { version = "0.13", features = ["macros"], optional = true }

# Optional — mesh networking
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rcgen = { version = "0.13", optional = true }
rmp-serde = { version = "1.3", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
x25519-dalek = { version = "2", features = ["static_secrets"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
wasmtime = { version = "21", optional = true }
sysinfo = "0.32"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockall = "0.13"

tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
